--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-
+  <link rel="icon" type="image/svg+xml" href="/cv-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CV Oluşturucu</title>
+  <meta name="description" content="CV Maker - Profesyonel CV'nizi kolayca oluşturun" />
+  <title>CV Maker | Profesyonel CV Oluşturucu</title>
 </head>
 
 <body>
